# UniGener

./: README.md  pyproject.toml
examples/: agent_config.json  generate_java_repo_tests.py  run_demo.py
examples/java_demo/: FooService.java  UniGenerProcessOrderTest.java
logs/: agent_api_calls.jsonl  agent_api_calls_spark_full_20260329_w0.jsonl  agent_api_calls_spark_full_20260329_w1.jsonl  agent_api_calls_spark_full_20260329_w2.jsonl  agent_api_calls_spark_full_20260329_w3.jsonl  code_retrieval.jsonl  embedded_jetty_factory_isolated_sandbox.json  embedded_jetty_factory_repair_summary.json  embedded_jetty_factory_single_sandbox.json  intent_planning.jsonl  results_smoke.json  sandbox_smoke_result.json  sandbox_smoke_result2.json
src/unigener/: __init__.py
src/unigener/agents/: __init__.py  base.py  code_retrieval_agent.py  intent_agent.py  llm_client.py  similar_test_agent.py  test_generation_agent.py
src/unigener/models/: __init__.py  schemas.py
src/unigener/pipeline/: __init__.py  contracts.py  java_test_sandbox.py  orchestrator.py  test_runner.py  test_writer.py
src/unigener/retrievers/: __init__.py  code_indexer.py  lsp_adapter.py  similar_tests.py
src/unigener/utils/: __init__.py  log_paths.py
tests/: test_unigener__find_uncovered_symbols.py  test_unigener_build_parser.py
tmp/spark/.metadata/.plugins/org.eclipse.jdt.core/: 3842426239.index  externalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
tmp/spark/logs/sandbox_iterations/: EmbeddedJettyFactory_iter_5.json  withPrefix_iter_8.json
(+542 files in other folders)
