[project]
name = "unigener"
version = "0.1.0"
description = "Multi-agent system for unit test generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "UniGener Team" }
]
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
